--- a/css/style-01.css
+++ b/css/style-01.css
@@ -622,6 +622,7 @@ h1,h2,h3,h4,h5{
 	  background-size: cover;
 	  padding: 30px 0 0 0;
 	  position: relative;
+	  background-color: #333;
   }
   .footer-logo::after {
 	position: absolute;
